--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ keras = "*"
 tensorflow = "*"
 gunicorn = "*"
 whitenoise = "*"
+django-bootstrap4 = "*"
+django-fontawesome-5 = "*"
 
 [dev-packages]
 
