--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.15.0
+asgiref==3.4.1
 astunparse==1.6.3
 beautifulsoup4==4.11.1
 cached-property==1.5.2
@@ -7,9 +8,9 @@ certifi==2022.6.15
 charset-normalizer==2.0.12
 clang==5.0
 dataclasses==0.8
-Django==2.2.4
+dj-database-url==0.5.0
+Django==3.2.13
 django-bootstrap4==21.1
-django-fontawesome-5==1.0.18
 djangorestframework==3.13.1
 flatbuffers==1.12
 gast==0.4.0
@@ -17,7 +18,6 @@ google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.47.0
-gunicorn==20.1.0
 h5py==3.1.0
 idna==3.3
 importlib-metadata==2.1.3
