--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.47.0
+gunicorn==20.1.0
 h5py==3.1.0
 idna==3.3
 importlib-metadata==2.1.3
